--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy</title>
+  <title>Privacy Policy - CommentFetcher AI</title>
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p>This website/app does not collect sensitive personal data. It only reads data provided by Facebook permissions that the user approves voluntarily...</p>
+  <p>CommentFetcher AI collects access tokens and comments from your Facebook Page in order to display posts and comments in our dashboard. We do not sell, share, or use your data for any other purposes. All data is stored securely and used only for providing the service.</p>
+  <p>Contact: your-email@example.com</p>
 </body>
 </html>
